--- a/oauth2-provider/src/main/resources/templates/login.html
+++ b/oauth2-provider/src/main/resources/templates/login.html
@@ -3,14 +3,12 @@
 <head>
 <title>Login</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
-	href="../../css/bootstrap.min.css" />
+	href="../css/bootstrap.min.css" />
 </head>
 <body onload="document.f.username.focus();">
 	<div class="container">
 		<div class="navbar">
 			<div class="navbar-inner">
-				<a class="brand" href="http://www.thymeleaf.org"> Thymeleaf -
-					Plain </a>
 				<ul class="nav">
 					<li><a th:href="@{/}" href="home.html"> Home </a></li>
 				</ul>
